# telemetry

./: .travis.yml  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  start_docker.sh
+telemetry/+ingest/: log_ad9361_tx_quad_cal_test.m  log_lte_test.m
+telemetry/+searches/: ad9361_tx_quad_cal_test.m
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test-prod.yml  test.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/matlab/: ad9361_tx_cal.m
resources/: ad936x_tx_quad_cal.json  evm_tests_el.json
results/: __init__.py  db.py  elastic.py
telemetry/: __init__.py  cli.py  db.py  elastic.py  gargantua.py  ingest.py  plugin.py  searches.py
telemetry/dev/: __init__.py  core.py  vpx.py
telemetry/gparser/: grabber.py  parser.py
telemetry/prod/: __init__.py  board_log.py  cn0511_prod.py  common.py  synchrona.py
telemetry/report/: gist.py  markdown.py  utility.py
telemetry/resources/: ad936x_tx_quad_cal.json  analog_perf.json  artifacts.json  boot_tests.json  evm_tests.json  evm_tests_el.json  github_release_stats.json  github_stats.json  hdl_resources.json  noos_tests.json
tests/: __init__.py  dev_test_config.yaml  resource_utilization.csv  test_db.py  test_dev.py  test_elastic.py  test_gparser.py  test_markdown.py  test_prod.py  test_telemetry.py
tests/test_artifacts/: zynqmp_zcu102_rev10_ad9081_vm4_l8_reports.xml  zynqmp_zcu102_rev10_fmcdaq3_reports.xml
utils/: fill_db_elastic.py
web/: Dockerfile  index.py  start_docker.sh
web/dash/: app.py  index.py
(+27 files in other folders)
